--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Nick Arora</title>
 
 
-    <link rel="stylesheet" href="/assets/styles/default.css">
+    <link rel="stylesheet" href="/assets/styles/base.css">
 
     
 
