deploy: 1cbdfabec7fdfcea0b21046602533f5e9283b66a

--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
     <link rel="stylesheet" href="/assets/styles/base.css">
   </head>
   <body>
+    <header>
+      <h1>Nick Arora</h1>
+      <p>Software engineer specializing in full stack web applications</p>
+    </header>
     <main id="content">
-      <section>
-        <h1>Nick Arora</h1>
-        <p>Software engineer specializing in full stack web applications</p>
-      </section>
-      <footer>
-        <nav class="social-media">
-          <a href="https://www.linkedin.com/in/nickaroraesq" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-          </a>
-        </nav>
-      </footer>
+      <ul>
+        <li>
+          <a href="/blog/test-post">Test post</a>
+        </li>
+      </ul>
     </main>
+    <footer>
+      <nav class="social-media">
+        <a href="https://www.linkedin.com/in/nickaroraesq" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+        </a>
+      </nav>
+      © 2023 Nick Arora
+    </footer>
   </body>
 </html>
