--- a/_app/_pages/404.html
+++ b/_app/_pages/404.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section>
+<section class="page-not-found">
   <h1>404</h1>
   <p>The requested page could not be found.</p>
 </section>
