deploy: c022ee09b81000d2eb9413c573b280b52813f3f3

--- a/404.html
+++ b/404.html
@@ -10,13 +10,16 @@
   </head>
   <body>
     <header class="primary-header">
-      <h1>
-        <a href="/">Nick Arora</a>
-      </h1>
-      <p>Software engineer specializing in full stack web applications</p>
+      <section class="container">
+        <a href="/">na</a>
+        <nav>
+          <a href="#">blog</a>
+          <a href="#">projects</a>
+        </nav>
+      </div>
     </header>
     <main class="primary-content">
-      <section>
+      <section class="page-not-found">
         <h1>404</h1>
         <p>The requested page could not be found.</p>
       </section>
