deploy: d470139309154ae05d17391a42137e6ffb5bfd5a

--- a/404.html
+++ b/404.html
@@ -15,10 +15,8 @@
   <body>
     <header class="primary-header">
       <section class="container">
-        <a href="/">na</a>
+        <a href="/">nick arora</a>
         <nav>
-          <a href="#">blog</a>
-          <a href="#">projects</a>
           <label id="theme-toggle">
             <input type="checkbox" />
             <div class="icons">
@@ -74,12 +72,14 @@
       </section>
     </main>
     <footer class="primary-footer">
-      © 2024 Nick Arora
-      <nav class="social-media">
-        <a href="https://www.linkedin.com/in/nickaroraesq" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-        </a>
-      </nav>
+      <section class="container">
+        <nav class="social-media">
+          <a href="https://www.linkedin.com/in/nickaroraesq" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+          </a>
+        </nav>
+        © 2024
+      </section>
     </footer>
   </body>
 </html>
