deploy: 1f0e6f4f8169abb7994548def4ddcc68e48179cb

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </div>
             </header>
             <p class="summary">
-              A book that offers a fresh perspective on leadership, centered around building empowered, accountable teams
+              A fresh perspective on leadership, centered around building empowered, accountable teams
             </p>
           </li>
         </ul>
