--- a/404.html
+++ b/404.html
@@ -14,13 +14,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&&family=JetBrains+Mono:wght@200;300&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&&family=JetBrains+Mono:wght@200;300&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap">
       <link rel="stylesheet" href="/assets/styles/base.css">
     </head>
     <body>
       <header class="primary-header">
         <section class="container">
-          <a href="/">nick arora</a>
+          <a class="site-id" href="/">Nick Arora</a>
           <nav>
             <label id="theme-toggle">
               <input type="checkbox" />
@@ -74,12 +74,7 @@
       </main>
       <footer class="primary-footer">
         <section class="container">
-          <nav class="social-media">
-            <a href="https://www.linkedin.com/in/nickaroraesq" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-            </a>
-          </nav>
-          © 2024
+          © 2024 Nick Arora
         </section>
       </footer>
     </body>
